--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <h4><strong>git</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="tech-icon col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6 github">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-github-plain"></i></span>
                         <h4><strong>GitHub</strong></h4>
                         <p class="text-faded mb-0"></p>
