--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li class="sidebar-nav-item"><a href="#services">Tech Proficiencies</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+                <li class="sidebar-nav-item"><a href="#resume">Resume</a></li>
             </ul>
         </nav>
         <!-- Header-->
@@ -48,10 +49,12 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2 class="light-bg">I am a full stack web developer with a background in teaching and curriculum development. I have a curious mind, love
+                        <h2 class="light-bg">I am a full stack web developer with a background of nearly seven years in teaching and curriculum development. I have a curious mind, love
                         working on teams, and am always eager to learn.</h2>
                         <p class="lead mb-5 light-bg">
-                            I received my BS in Marine Biology at the University of Oregon, but have decided to switch over to software engineering.
+                            I received my BS in Marine Biology at the University of Oregon in 2017 while working in several labs studying genetics, ecology, and learning technical skills and practices. I've chosen to devote my time to software development due to my experience both in labs and as a teacher. As an engineer I can continue to learn as I did in the laboratory, and flex my people skills and teamwork that I picked up as a teacher. Here you can find my <a href="assets/Resume 2021.pdf" target="_blank">Resume</a> to clarify a bit more of my background.
+                        <br>
+                        <n/>
                             My main interests are web development, AR/MR technologies, and game development. I recently completed the Software
                             Engineering Immersive program at General Assembly, and am learning Unity and other AR programs in my free time.
                             Please reach out and say hello!
@@ -277,7 +280,7 @@
                     </div>
                     <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-mongodb-plain"></i></span>
-                        <h4><strong>MongoDB/Mongoose</strong></h4>
+                        <h4><strong>MongoDB</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
                     <div class="tech-icon col-lg-3 col-md-6">
@@ -446,7 +449,7 @@
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Nicolas Aguiluz 2021</p>
-                <a href="assets/Resume 2021.pdf" target="_blank">Resume</a>
+                <a id="resume" href="assets/Resume 2021.pdf" target="_blank">Resume</a>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
