--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2 class="light-bg">I am a full stack web developer with a background of nearly seven years in teaching and curriculum development. I have a curious mind, love
-                        working on teams, and am always eager to learn.</h2>
+                        <h2 class="light-bg">I am a full stack web developer with experience building and maintaining features for live service websites with a background of nearly seven years in teaching and curriculum development. I have a curious mind, love working on teams, and am always eager to learn.</h2>
                         <p class="lead mb-5 light-bg">
                             I received my BS in Marine Biology at the University of Oregon in 2017 while working in several labs studying genetics, ecology, and learning technical skills and practices. I've chosen to devote my time to software development due to my experience both in labs and as a teacher. As an engineer I can continue to learn as I did in the laboratory, and flex my people skills and teamwork that I picked up as a teacher. Here you can find my <a href="assets/resume 1 2023 (1).pdf" target="_blank">Resume</a> to clarify a bit more of my background.
                         <br>
                         <n/>
-                            My main interests are web development, AR/MR technologies, and game development. I recently completed the Software
-                            Engineering Immersive program at General Assembly, and am learning Unity and other AR programs in my free time.
+                            My main interests are web development, AR/XR technologies, and game development. I am learning Unity and other AR programs in my free time.
                             Please reach out and say hello!
                         </p>
                     </div>
