--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2 class="light-bg">I am a full stack web developer with experience building and maintaining features for live service websites with a background of nearly seven years in teaching and curriculum development. I have a curious mind, love working on teams, and am always eager to learn.</h2>
+                        <h2 class="light-bg">I am a full stack web developer most recently working with a team at Yorktown Systems Group. Working on a live service website with many users, I maintained and built features through their whole lifecycles from writing tickets to deployment.</h2>
                         <p class="lead mb-5 light-bg">
-                            I received my BS in Marine Biology at the University of Oregon in 2017 while working in several labs studying genetics, ecology, and learning technical skills and practices. I've chosen to devote my time to software development due to my experience both in labs and as a teacher. As an engineer I can continue to learn as I did in the laboratory, and flex my people skills and teamwork that I picked up as a teacher. Here you can find my <a href="assets/resume 1 2023 (1).pdf" target="_blank">Resume</a> to clarify a bit more of my background.
+                            I received my BS in Marine Biology at the University of Oregon in 2017 while working in several labs studying genetics, ecology, and learning technical skills and practices. With a background of nearly seven years in teaching and curriculum development, I have a curious mind, love working on
+                            teams, and am always eager to learn.  As an engineer I can continue to learn as I did in the laboratory, and flex my people skills and teamwork that I picked up as a teacher. Here you can find my <a href="assets/resume 1 2023 (1).pdf" target="_blank">Resume</a> to clarify a bit more of my background.
                         <br>
                         <n/>
                             My main interests are web development, AR/XR technologies, and game development. I am learning Unity and other AR programs in my free time.
@@ -69,38 +70,6 @@
 
         <section class="content-section bg-primary text-white text-center" id="services">
             <div id="carouselExampleIndicators" class="carousel slide  mobile-hide" data-bs-ride="carousel">
-                <!-- <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                        aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                        aria-label="Slide 5"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-                        aria-label="Slide 6"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
-                        aria-label="Slide 7"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
-                        aria-label="Slide 8"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
-                        aria-label="Slide 9"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
-                        aria-label="Slide 10"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10"
-                        aria-label="Slide 11"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11"
-                        aria-label="Slide 12"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12"
-                        aria-label="Slide 13"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13"
-                        aria-label="Slide 14"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14"
-                        aria-label="Slide 15"></button>
-                </div> -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div>
@@ -418,21 +387,6 @@
                 </div>
             </div>
         </section>
-        <!-- Call to Action-->
-        <!-- <section class="content-section bg-primary text-white">
-            <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-                <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
-            </div>
-        </section> -->
-        <!-- Map-->
-        <!-- <div class="map" id="contact">
-            <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-            <br />
-            <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
-        </div> -->
-        <!-- Footer-->
         <footer class="footer text-center" id="contact">
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
